; ModuleID = '/home/carl/AnghaBench/libgit2/tests/buf/extr_quote.c_test_buf_quote__unquote_succeeds.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/buf/extr_quote.c_test_buf_quote__unquote_succeeds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"\22\22\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"\22 \22\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"\22foo\22\00", align 1
@.str.6 = private unnamed_addr constant [8 x i8] c"foo bar\00", align 1
@.str.7 = private unnamed_addr constant [10 x i8] c"\22foo bar\22\00", align 1
@.str.8 = private unnamed_addr constant [8 x i8] c"foo\22bar\00", align 1
@.str.9 = private unnamed_addr constant [11 x i8] c"\22foo\\\22bar\22\00", align 1
@.str.10 = private unnamed_addr constant [8 x i8] c"foo\\bar\00", align 1
@.str.11 = private unnamed_addr constant [11 x i8] c"\22foo\\\\bar\22\00", align 1
@.str.12 = private unnamed_addr constant [8 x i8] c"foo\09bar\00", align 1
@.str.13 = private unnamed_addr constant [11 x i8] c"\22foo\\tbar\22\00", align 1
@.str.14 = private unnamed_addr constant [10 x i8] c"\0Bfoo\09bar\0A\00", align 1
@.str.15 = private unnamed_addr constant [15 x i8] c"\22\\vfoo\\tbar\\n\22\00", align 1
@.str.16 = private unnamed_addr constant [8 x i8] c"foo\0Abar\00", align 1
@.str.17 = private unnamed_addr constant [13 x i8] c"\22foo\\012bar\22\00", align 1
@.str.18 = private unnamed_addr constant [9 x i8] c"foo\0D\0Abar\00", align 1
@.str.19 = private unnamed_addr constant [17 x i8] c"\22foo\\015\\012bar\22\00", align 1
@.str.20 = private unnamed_addr constant [35 x i8] c"\22\\146\\157\\157\\015\\012\\142\\141\\162\22\00", align 1
@.str.21 = private unnamed_addr constant [11 x i8] c"newline: \0A\00", align 1
@.str.22 = private unnamed_addr constant [16 x i8] c"\22newline: \\012\22\00", align 1
@.str.23 = private unnamed_addr constant [8 x i8] c"0xff: \FF\00", align 1
@.str.24 = private unnamed_addr constant [13 x i8] c"\220xff: \\377\22\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_buf_quote__unquote_succeeds() #0 {
  %1 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %2 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %3 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  %4 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.7, i64 0, i64 0))
  %5 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.9, i64 0, i64 0))
  %6 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.11, i64 0, i64 0))
  %7 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.13, i64 0, i64 0))
  %8 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.15, i64 0, i64 0))
  %9 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.16, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.17, i64 0, i64 0))
  %10 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.19, i64 0, i64 0))
  %11 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.20, i64 0, i64 0))
  %12 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.21, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.22, i64 0, i64 0))
  %13 = call i32 @expect_unquote_pass(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.24, i64 0, i64 0))
  ret void
}

declare dso_local i32 @expect_unquote_pass(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
